# craftgl

./: .gitignore  README.md  fetch_assets.sh  imgui.ini  meson.build
src/: App.cpp  Image.cpp  InputHandler.cpp  Mesh.cpp  MeshFactory.cpp  Renderer.cpp  Shader.cpp  TextureArray.cpp  UI.cpp  World.cpp  convert_shaders.sh  fragment.glsl  main.cpp  meson.build  vertex.glsl
src/include/: App.h  Image.h  InputHandler.h  Mesh.h  MeshFactory.h  Renderer.h  Shader.h  TextureArray.h  UI.h  World.h
src/include/shaders/: fragment_shader.h  vertex_shader.h
